syntax = "proto3";

package com.strandhvilliam.grpc;

option java_package = "com.strandhvilliam.productcatalog.grpc";
option java_outer_classname = "ProductProto";
option java_multiple_files = true;

service ProductService {
  rpc GetProduct (ProductIdRequest) returns (ProductResponse);
  rpc GetManyProducts (ManyProductIdRequest) returns (ListProductsResponse);
  rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
  rpc ListByRestaurant (ListByRestaurantRequest) returns (ListProductsResponse);
  rpc ListByCategory (ListByRestaurantRequest) returns (ListProductsResponse);
}

message ProductIdRequest {
  string id = 1;
}

message ManyProductIdRequest {
  repeated string ids = 1;
}

message ListByRestaurantRequest {
  string restaurantId = 1;
}

message ListByCategoryRequest {
  string categoryId = 1;
}

message CreateProductRequest {
  string description = 1;
  double cost = 2;
}

message ProductResponse {
  string id = 1;
  string description = 2;
  double cost = 3;
}

message ListProductsResponse {
  repeated ProductResponse products = 1;
}
